; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/block/extr_sx8.c_carm_push_q.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/block/extr_sx8.c_carm_push_q.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.carm_host = type { i32, i32, %struct.request_queue** }
%struct.request_queue = type { i32 }

@CARM_MAX_WAIT_Q = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"STOPPED QUEUE %p\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.carm_host*, %struct.request_queue*)* @carm_push_q to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @carm_push_q(%struct.carm_host* %0, %struct.request_queue* %1) #0 {
  %3 = alloca %struct.carm_host*, align 8
  %4 = alloca %struct.request_queue*, align 8
  %5 = alloca i32, align 4
  store %struct.carm_host* %0, %struct.carm_host** %3, align 8
  store %struct.request_queue* %1, %struct.request_queue** %4, align 8
  %6 = load %struct.carm_host*, %struct.carm_host** %3, align 8
  %7 = getelementptr inbounds %struct.carm_host, %struct.carm_host* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = load i32, i32* @CARM_MAX_WAIT_Q, align 4
  %10 = urem i32 %8, %9
  store i32 %10, i32* %5, align 4
  %11 = load %struct.request_queue*, %struct.request_queue** %4, align 8
  %12 = call i32 @blk_stop_queue(%struct.request_queue* %11)
  %13 = load %struct.request_queue*, %struct.request_queue** %4, align 8
  %14 = call i32 @VPRINTK(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), %struct.request_queue* %13)
  %15 = load %struct.request_queue*, %struct.request_queue** %4, align 8
  %16 = load %struct.carm_host*, %struct.carm_host** %3, align 8
  %17 = getelementptr inbounds %struct.carm_host, %struct.carm_host* %16, i32 0, i32 2
  %18 = load %struct.request_queue**, %struct.request_queue*** %17, align 8
  %19 = load i32, i32* %5, align 4
  %20 = zext i32 %19 to i64
  %21 = getelementptr inbounds %struct.request_queue*, %struct.request_queue** %18, i64 %20
  store %struct.request_queue* %15, %struct.request_queue** %21, align 8
  %22 = load %struct.carm_host*, %struct.carm_host** %3, align 8
  %23 = getelementptr inbounds %struct.carm_host, %struct.carm_host* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = add i32 %24, 1
  store i32 %25, i32* %23, align 8
  %26 = load %struct.carm_host*, %struct.carm_host** %3, align 8
  %27 = getelementptr inbounds %struct.carm_host, %struct.carm_host* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 8
  %29 = load %struct.carm_host*, %struct.carm_host** %3, align 8
  %30 = getelementptr inbounds %struct.carm_host, %struct.carm_host* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = icmp eq i32 %28, %31
  %33 = zext i1 %32 to i32
  %34 = call i32 @BUG_ON(i32 %33)
  ret void
}

declare dso_local i32 @blk_stop_queue(%struct.request_queue*) #1

declare dso_local i32 @VPRINTK(i8*, %struct.request_queue*) #1

declare dso_local i32 @BUG_ON(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
